# multiple-repo

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.cfg  test.py
.github/workflows/: buld_and_test_function1.yml  buld_and_test_function3.yml  ci-cd-function1.yml  ci-cd-function2.yml  ci-cd-function3.yml  ci-cd-function4.yml  ci-ci-function2.yml  ci-ci-function3.yml  ci-ci-function4.yml  lintcheck.yaml  reusable-build-test.yml
.github/workflows/function1/: buld_and_test_function1.yml
.github/workflows/function2/: buld_and_test_function2.yml
.github/workflows/function4/: buld_and_test_function4.yml
function1/: demo.py  main.py  requirements.txt
function1/tests/: test_example.py
function2/: .gcloudignore  main.py
function2/tests/: test.py
function3/: main.py  requirements.txt  test.py
shared/: README.md  utils.py
