[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
description = "common module using for each function"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["shared"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 100
